packages/cashc/test/compiler/ParseError/misspelled_reverse.cash
contract Test() {
    return {
        hello(bytes a) {
            // cspell:disable-next-lines
            bytes b = a.revese()
            require(b == a);
        }
    }
}
